--- a/style.css
+++ b/style.css
@@ -109,6 +109,8 @@ input, select, textarea {
   width: 20px;
   height: 20px;
   margin-left: 10px;
+  position: relative;
+  bottom: -1px;
 }
 
 .rect {
@@ -137,5 +139,49 @@ position: relative;
   bottom  : -10px;
   height  : 1px;
   width   : 80%;  /* or 100px */
-  border-bottom: 2px solid rgb(255, 0, 0);
+  border-bottom: 2px solid firebrick;
+}
+
+#survey-form p {
+  margin-bottom: 15px;
+  font-size: 1.2em;
+}
+
+label:nth-child(1) {
+  margin-bottom: 4px;
+  font-size: 1.2em;
+}
+
+#dropdown{
+  border: 3px solid wheat;
+  margin: 0;
+}
+
+#p-rb {
+position: relative;
+top: 10px;
+}
+
+#circle-one
+{
+  position: relative;
+  top: 6px;
+}
+
+textarea {
+  height: 150px;
+}
+
+button{
+  display: block;
+  width: 45%;
+  height: 40px;
+  margin-bottom: 10px;
+  position: relative;
+  bottom: 10px;
+  color: black;
+  background: firebrick;
+  border: 0;
+  border-radius: 3px;
+  font-size: 1.1em;
 }
