css changed again

--- a/style.css
+++ b/style.css
@@ -77,15 +77,10 @@ text-shadow: 1px 1px 1px rgba(0, 0, 0);
   display: flex;
   flex-direction: column;
   width: 75%;
-  margin-bottom:20px ;
 
 }
 
-@media (max-width: 576px) {
-  .group {
-    width: 100%;
-  }
-}
+
 input, select, textarea {
   margin-top: 10px;
 }
@@ -184,4 +179,22 @@ button{
   border: 0;
   border-radius: 3px;
   font-size: 1.1em;
+}
+
+@media (max-width: 576px) {
+  .group {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+.group::before {
+  content : "";
+  position: absolute;
+  left    :17.5%;
+  bottom  : 0px;
+  height  : 1px;
+  width   : 65%;  /* or 100px */
+  border-bottom: 2px solid firebrick;
+}
+
 }
